# IoT-project

./: .gitignore  LICENSE  README.md  build.sh  init_sample_db.sh  push.sh  pyproject.toml  run.sh  setup.sh
RaspberryPi/connection/: connect.sh  crosswalk.sh  token.sh
RaspberryPi/tflite/: people_detection.py
app/: app.py
backend/: pyproject.toml  sql_app.db
backend/app/: init_db.py  main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: crosswalks.py  login.py  statistics.py  users.py
backend/app/core/: security.py  settings.py
backend/app/crud/: __init__.py  crud_crosswalk.py  crud_statistics.py  crud_users.py
backend/app/db/: database.py
backend/app/models/: crosswalk.py  statistics.py  user.py
backend/app/schemas/: crosswalk.py  statistics.py  token.py  user.py
backend/docker/: Dockerfile
camera/: recorder.py
docker/: Dockerfile
frontend/: app.py  client.py  filters.py  graphs.py  index.py  layout.py  manager.py  pyproject.toml  settings.py  test_con.py
frontend/assets/: style.css
frontend/callbacks/: __init__.py  cards.py  dropdowns.py
frontend/docker/: Dockerfile
frontend/views/: management.py
scripts/: common.sh  generate_db_entries.sh  init_sample_db.sh
