[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Dawid Jakóbczak <djakobczak.student@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
dash = "^2.0.0"
Werkzeug = "^2.0.2"
pandas = "^1.3.4"
dash-bootstrap-components = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
