[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Dawid Jakóbczak <djakobczak.student@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
dash = "^2.0.0"
Werkzeug = "^2.0.2"
pandas = "^1.3.4"
dash-bootstrap-components = "^1.0.0"
dash-auth = "^1.4.1"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
statsmodels = "^0.13.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
